--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,31 @@
   <meta charset="UTF-8">
   <title>{{page.title}}</title>
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="{{site.root}}/css/materialize.css"  media="screen,projection"/>
+  <link rel="stylesheet" href="{{site.root}}/css/style.css" type="text/css" />
 </head>
+
 <body>
+
+  <div class="navbar-fixed">
+    <nav class="grey darken-2" role="navigation">
+      <div class="nav-wrapper">
+        <a id="logo-container" href="{{site.root}}/" class="brand-logo">Builderscon</a>
+        <ul class="right">
+          <li><a href="{{site.root}}/signup">Sign up</a></li>
+          <li><a href="{{site.root}}/login">Log in</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <div class="container">
   {{content}}
-  <script src="js/main.js"></script>
+  </div>
+
+  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="{{site.root}}/js/materialize.js"></script>
+  <script src="{{site.root}}/js/main.js"></script>
 </body>
 </html>
