--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
   <div class="navbar-fixed">
     <nav class="grey darken-2" role="navigation">
-      <div class="nav-wrapper">
+      <div class="nav-wrapper container">
         <a id="logo-container" href="{{site.root}}/" class="brand-logo">Builderscon</a>
         <ul class="right">
           <li><a href="{{site.root}}/signup">Sign up</a></li>
